# rag-telegram-gpt-bot

./: .env.example  .gitignore  MULTI_BOT_ARCHITECTURE.md  README.md  input.txt  legale  legale.py  legale_bot_session.session  map.md  models.txt  pyproject.toml  refactor_plan.md  refactor_plan2.md
.agent/: phase11_session_summary.md
docs/: PERMISSIONS_FIX.md  SETUP_LEGALE_BOT_USER.md  TOKEN_MANAGEMENT.md  TOPICS_TUNING.md  УПРАВЛЕНИЕ_ТОКЕНАМИ.md
init.d/: README.md  legale-bot
nginx/: telegram-bot.conf
scripts/: fix_permissions.sh  reset_legale_bot_user.sh
src/ai/: clustering.py
src/bot/: admin.py  admin_commands.py  admin_router.py  admin_tasks.py  cli.py  command_parser.py  config.py  core.py  tgbot.py
src/bot/utils/: __init__.py  access_control.py  command_validator.py  database_stats.py  frequency_controller.py  health_checker.py  response_formatter.py  telegram_common.py  telegram_links.py
src/core/: cli_parser.py  embedding.py  llm.py  message_search.py  prompt.py  rag_search.py  retrieval.py  syslog2.py  topics.py
src/ingestion/: chunker.py  parser.py  pipeline.py  telegram.py
src/storage/: db.py  vector_store.py
src/storage/migrations/: __init__.py  drop_legacy_tables.py  migrate_l2_to_chroma.py
systemd/: legale-bot.service
tests/: conftest.py  test_access_control.py  test_admin_commands.py  test_admin_manager.py  test_admin_router.py  test_admin_tasks.py  test_bot_core_chat.py  test_bot_core_context.py  test_bot_core_models.py  test_chunker.py  test_cli.py  test_cli_parser.py  test_clustering.py  test_command_validator.py  test_config.py  test_database_stats.py  test_db.py  test_db_hierarchical.py  test_drop_legacy_tables.py  test_embedding.py  test_embedding_download.py  test_frequency_controller.py  test_health_checker.py  test_ingestion_telegram.py  test_llm.py  test_message_search.py  test_parser.py  test_pipeline.py  test_prompt.py  test_response_formatter.py  test_retrieval.py  test_retrieval_debug.py  test_syslog2.py  test_telegram_common.py  test_telegram_links.py  test_tgbot.py  test_tgbot_cli.py  test_tgbot_extended.py  test_topics.py  test_vector_store.py
