[project]
name = "legale-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruslan Isaev",email = "legale.legale@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest >=9.0.1,<10.0.0",
    "chromadb (>=0.5.23)",
    "sqlalchemy >=2.0.44,<3.0.0",
    "openai >=2.9.0,<3.0.0",
    "python-dotenv >=1.2.1,<2.0.0",
    "tiktoken >=0.12.0,<0.13.0",
    "telethon >=1.42.0,<2.0.0",
    "python-telegram-bot (>=21.0)",
    "fastapi >=0.100.0,<1.0.0",
    "uvicorn[standard] >=0.23.0,<1.0.0",
    "python-daemon >=3.0.0,<4.0.0",
    "numpy (>=2.0.0)",
    "psutil (>=7.1.3,<8.0.0)",
    "sentence-transformers >=5.0.0,<6.0.0",
    "einops (>=0.8.1,<0.9.0)",
    "hdbscan >=0.8.33,<1.0.0",
    "scikit-learn >=1.3.0,<2.0.0"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
